# ottobot

./: .gitignore  404.html  README.md  frames.gv  index.html
.build/mzero_pro_bl_dbg/: build.options.json  includes.cache  test.ino.elf  test.ino.hex  test.ino.map  test.ino.with_bootloader.hex
about/: index.html  todo.html
arduino/archive/: ottobot_drive_oo.cpp  ottobot_drive_oo.h
arduino/notes/: BNO55_notes.md  battery_state_notes.md  setup_notes.md
arduino/reference/: ArduinoHardware.h
blog/: 2020-04-09_ProjectStart.html  index.html
catkin_ws/src/ottobot_robot/: CMakeLists.txt  package.xml
catkin_ws/src/ottobot_robot/launch/: robot.launch
catkin_ws/src/ottobot_sense/: CMakeLists.txt  package.xml
catkin_ws/src/ottobot_sense/config/: imu_calibration_params.yaml  rpilidar_params.yaml
catkin_ws/src/ottobot_sense/launch/: sense.launch
catkin_ws/src/ottobot_sense/msg/: ImuCalibration.msg  ImuCalibrationOffsets.msg  ImuCalibrationStatus.msg
catkin_ws/src/ottobot_sense/scripts/: imu_calibration_commander.py  imu_calibration_node.py
catkin_ws/src/ottobot_sense/srv/: UpdateImuOffsets.srv
detail/: battery.html  imu.html  index.html  kinect.html  motor_control.html
docs/: .gitignore  404.html  Gemfile  README.md  _config.yml  about.md  blah.md  build-arduino.md  build-notes.html  build_arduino.md  build_battery_state.md  build_imu.md  build_rpi.md  deploy.sh  index.html  index.md  package.json  todo.md
setup/: arduino.html  index.html  kineticSerialClient.py  revert_serialclient_to_kinetic.sh  ros_tools.html  rpi.html  setup_raspi.sh
(+252 files in other folders)
