<?xml version="1.0"?>
<package format="2">
  <name>ottobot_robot</name>
  <version>0.0.0</version>
  <description>The ottobot_robot package</description>

  <author email="willhunt@noemail.com">Will Hunt</author>
  <maintainer email="willhunt@noemail.com">will</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ottobot_description</exec_depend>
  <exec_depend>ottobot_navigation</exec_depend>
  <exec_depend>ottobot_sense</exec_depend>
  <exec_depend>ottobot_control</exec_depend>  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>